# LSAC-Status-Checker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  cloudformation.yaml  lambda_handler.py  lsac_checker.py  pyproject.toml  requirements-lambda.txt  requirements.txt  schools.txt.example
