[project]
name = "lsac-status-checker"
version = "1.0.0"
description = "Automated LSAC law school application status checker"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`)
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4"]
ignore = [
    "E501",  # Line too long - common in scripts with long strings
    "T201",  # Print statements are intentional for CLI tools
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "single"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending
line-ending = "auto"
